--- a/documents/index.html
+++ b/documents/index.html
@@ -5,9 +5,10 @@
     <meta content="width=device-width" name="viewport">
     <meta content="文書や翻訳、表、チュートリアルなど、独立して提供している文書群についてのページです。" name="description">
 
-    <title>Documents - Hail2u​.net</title>
+    <title>Documents - Hail2u.net</title>
 
     <link href="/apple-touch-icon.png" rel="apple-touch-icon" type="image/png">
+    <link color="#fcf9f0" href="" rel="mask-icon" type="image/svg">
     <link href="/documents/" rel="canonical">
     <link href="/feed" rel="alternate" type="application/rss+xml">
 
@@ -33,7 +34,7 @@
   <body>
     <header class="global-header" role="banner">
       
-      <h1 class="logo"><a href="/">Hail2u​.net</a></h1>
+      <h1 class="logo"><a href="/">Hail2u.net</a></h1>
     
       <nav class="site-navigation">
         <ul>
