--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta content="width=device-width" name="viewport">
     <meta content="Hail2u.netは長嶋享の手による書き物を集めたウェブサイトです。主にウェブサイト制作に関する話題が中心です。" name="description">
 
-    <title>Hail2u​.net</title>
+    <title>Hail2u.net</title>
 
     <link href="/apple-touch-icon.png" rel="apple-touch-icon" type="image/png">
+    <link color="#fcf9f0" href="" rel="mask-icon" type="image/svg">
     <link href="/" rel="canonical">
     <link href="/feed" rel="alternate" type="application/rss+xml">
 
@@ -34,7 +35,7 @@
 
   <body>
     <header class="global-header" role="banner">
-      <h1 class="logo"><mark>Hail2u​.net</mark></h1>
+      <h1 class="logo"><mark>Hail2u.net</mark></h1>
       
     
       <nav class="site-navigation">
