--- a/documents/index.html
+++ b/documents/index.html
@@ -8,7 +8,7 @@
     <title>Documents - Hail2u.net</title>
 
     <link href="/apple-touch-icon.png" rel="apple-touch-icon" type="image/png">
-    <link color="#fcf9f0" href="" rel="mask-icon" type="image/svg">
+    <link color="#534b47" href="" rel="mask-icon" type="image/svg">
     <link href="/documents/" rel="canonical">
     <link href="/feed" rel="alternate" type="application/rss+xml">
 
