Rename CSS file

--- a/src/html/documents/ala-getting-started-with-sass.html
+++ b/src/html/documents/ala-getting-started-with-sass.html
@@ -6,7 +6,7 @@
 
     <title>Sassで行こう！</title>
 
-    <link rel="stylesheet" type="text/css" href="/styles/documents.min.css">
+    <link rel="stylesheet" type="text/css" href="/styles/natural.min.css">
   </head>
   <body>
     <h1>Sassで行こう！</h1>
