--- a/src/html/documents/ala-whitespace.html
+++ b/src/html/documents/ala-whitespace.html
@@ -6,7 +6,7 @@
 
     <title>余白の美</title>
 
-    <link rel="stylesheet" type="text/css" href="/styles/documents.min.css">
+    <link rel="stylesheet" type="text/css" href="/styles/natural.min.css">
     <style>
       .clipart {
         float: right;
