--- a/src/html/documents/bulletproof-icon-fonts.html
+++ b/src/html/documents/bulletproof-icon-fonts.html
@@ -6,7 +6,7 @@
 
     <title>安全でアクセシブルなアイコン・フォント</title>
 
-    <link rel="stylesheet" href="/styles/documents.min.css">
+    <link rel="stylesheet" href="/styles/natural.min.css">
   </head>
   <body>
     <h1>安全でアクセシブルなアイコン・フォント</h1>
