--- a/src/html/documents/democratic-design.html
+++ b/src/html/documents/democratic-design.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width" name="viewport">
     <title>民主的なデザイン</title>
-    <link rel="stylesheet" href="/styles/documents.min.css">
+    <link rel="stylesheet" href="/styles/natural.min.css">
   </head>
   <body>
     <header>
