--- a/src/html/documents/diveintohtml5-semantics.html
+++ b/src/html/documents/diveintohtml5-semantics.html
@@ -6,7 +6,7 @@
 
     <title>結局どうすればいいの？ - Dive Into HTML5</title>
 
-    <link rel="stylesheet" type="text/css" href="/styles/documents.min.css">
+    <link rel="stylesheet" type="text/css" href="/styles/natural.min.css">
 
     <style type="text/css">
       .a {
