--- a/src/html/documents/html-img-alt.html
+++ b/src/html/documents/html-img-alt.html
@@ -6,7 +6,7 @@
 
     <title>HTMLにおけるimg要素のalt属性</title>
 
-    <link rel="stylesheet" type="text/css" href="/styles/documents.min.css">
+    <link rel="stylesheet" type="text/css" href="/styles/natural.min.css">
 
     <style type="text/css">
       .a {
