--- a/src/html/documents/markup.html
+++ b/src/html/documents/markup.html
@@ -6,7 +6,7 @@
 
     <title>“マークアップ”するということ ～ HTML5勧告に寄せて ～</title>
 
-    <link rel="stylesheet" href="/styles/documents.min.css">
+    <link rel="stylesheet" href="/styles/natural.min.css">
   </head>
   <body>
     <h1>“マークアップ”するということ ～ HTML5勧告に寄せて ～</h1>
