--- a/src/html/documents/opjsdom.html
+++ b/src/html/documents/opjsdom.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width">
     <title>Support for JavaScript and JScript Objects in Opera</title>
-    <link rel="stylesheet" type="text/css" href="/styles/documents.min.css">
+    <link rel="stylesheet" type="text/css" href="/styles/natural.min.css">
     <style type="text/css">
       li.o4 {
         color:#993333;
