--- a/src/html/documents/sass-and-sassy-css.html
+++ b/src/html/documents/sass-and-sassy-css.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Sass、そしてSassy CSS (SCSS)</title>
-    <link rel="stylesheet" href="/styles/documents.min.css">
+    <link rel="stylesheet" href="/styles/natural.min.css">
   </head>
   <body>
     <h1>Sass、そしてSassy CSS (SCSS)</h1>
