--- a/src/html/documents/style-repository.html
+++ b/src/html/documents/style-repository.html
@@ -6,7 +6,7 @@
 
     <title>スタイル・リポジトリ</title>
 
-    <link rel="stylesheet" href="/styles/documents.min.css">
+    <link rel="stylesheet" href="/styles/natural.min.css">
   </head>
   <body>
     <h1>スタイル・リポジトリ</h1>
