--- a/src/html/documents/think-of-the-beginners.html
+++ b/src/html/documents/think-of-the-beginners.html
@@ -6,7 +6,7 @@
 
     <title>初心者のことを考えよう</title>
 
-    <link rel="stylesheet" href="/styles/documents.min.css">
+    <link rel="stylesheet" href="/styles/natural.min.css">
   </head>
   <body>
     <h1>初心者のことを考えよう</h1>
