--- a/src/html/documents/translation-is-easy-really.html
+++ b/src/html/documents/translation-is-easy-really.html
@@ -6,7 +6,7 @@
 
     <title>翻訳は簡単だよ、本当に</title>
 
-    <link rel="stylesheet" type="text/css" href="/styles/documents.min.css">
+    <link rel="stylesheet" type="text/css" href="/styles/natural.min.css">
   </head>
   <body>
     <h1>翻訳は簡単だよ、本当に</h1>
