--- a/src/html/documents/web-typography-best-practices.html
+++ b/src/html/documents/web-typography-best-practices.html
@@ -6,7 +6,7 @@
 
     <title>ウェブ・タイポグラフィーのベスト・プラクティス</title>
 
-    <link rel="stylesheet" href="/styles/documents.min.css">
+    <link rel="stylesheet" href="/styles/natural.min.css">
   </head>
   <body>
     <h1>ウェブ・タイポグラフィーのベスト・プラクティス</h1>
