--- a/src/html/documents/bulletproof-at-font-face-syntax.html
+++ b/src/html/documents/bulletproof-at-font-face-syntax.html
@@ -6,7 +6,7 @@
 
     <title>安全な@font-faceの書き方</title>
 
-    <link rel="stylesheet" href="/styles/documents.min.css">
+    <link rel="stylesheet" href="/styles/natural.min.css">
   </head>
   <body>
     <h1>安全な@font-faceの書き方</h1>
