--- a/src/html/documents/cutting-down-on-vendor-prefixes.html
+++ b/src/html/documents/cutting-down-on-vendor-prefixes.html
@@ -6,7 +6,7 @@
 
     <title>ベンダー拡張プリフィックスヲ削減セヨ</title>
 
-    <link rel="stylesheet" href="/styles/documents.min.css">
+    <link rel="stylesheet" href="/styles/natural.min.css">
   </head>
   <body>
     <h1>ベンダー拡張プリフィックスヲ削減セヨ</h1>
