--- a/src/html/documents/learn-you-a-flexbox-for-great-good.html
+++ b/src/html/documents/learn-you-a-flexbox-for-great-good.html
@@ -6,7 +6,7 @@
 
     <title>Flexbox、おもしろいですよ？</title>
 
-    <link rel="stylesheet" href="/styles/documents.min.css">
+    <link rel="stylesheet" href="/styles/natural.min.css">
   </head>
   <body>
     <h1>Flexbox、おもしろいですよ？</h1>
