--- a/src/html/documents/ps_lightning.html
+++ b/src/html/documents/ps_lightning.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width">
     <title>Draw lightning in Photoshop 7</title>
-    <link rel="stylesheet" type="text/css" href="/styles/documents.min.css">
+    <link rel="stylesheet" type="text/css" href="/styles/natural.min.css">
   </head>
   <body>
     <h1>Draw lightning in Photoshop 7</h1>
