--- a/src/html/documents/rss-tutorial.html
+++ b/src/html/documents/rss-tutorial.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width">
     <title>RSS Tutorial for Content Publishers and Webmasters</title>
-    <link rel="stylesheet" type="text/css" href="/styles/documents.min.css" />
+    <link rel="stylesheet" type="text/css" href="/styles/natural.min.css" />
   </head>
   <body>
     <h1>RSS Tutorial</h1>
