--- a/src/html/documents/sass-guide-ja.html
+++ b/src/html/documents/sass-guide-ja.html
@@ -6,7 +6,7 @@
 
     <title>Sassの基本</title>
 
-    <link rel="stylesheet" href="/styles/documents.min.css">
+    <link rel="stylesheet" href="/styles/natural.min.css">
   </head>
   <body>
     <h1>Sassの基本</h1>
