--- a/src/html/documents/sass-tutorial.html
+++ b/src/html/documents/sass-tutorial.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Sass - チュートリアル</title>
-    <link rel="stylesheet" href="/styles/documents.min.css">
+    <link rel="stylesheet" href="/styles/natural.min.css">
     <style>
       .block, .compare {
         overflow: hidden;
