--- a/src/html/documents/what-should-you-say-when-your-app-goes-down.html
+++ b/src/html/documents/what-should-you-say-when-your-app-goes-down.html
@@ -6,7 +6,7 @@
 
     <title>あなたのサービスが落ちた時にユーザーになんと言うべきでしょうか？</title>
 
-    <link rel="stylesheet" href="/styles/documents.min.css">
+    <link rel="stylesheet" href="/styles/natural.min.css">
   </head>
   <body>
     <h1>あなたのサービスが落ちた時にユーザーになんと言うべきでしょうか？</h1>
