Increase white spaces around hr

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -19,8 +19,8 @@
     <script async src="../js/debug/toggle-eyecatch.js"></script>
     <script async src="../js/debug/toggle-outline.js"></script>
     <script async src="../js/debug/toggle-tagline.js"></script>
-    <script async src="../js/set-title-for-post-list.js"></script>
-    <script async src="../js/unutm.js"></script>
+    <script async src="../js/ellipsis-title.js"></script>
+    <script async src="https://hail2u.net/scripts/unutm.js"></script>
   </head>
 
   <body>
