Update Style Guide descriptions

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -52,7 +52,7 @@
           <a href="../img/about/how-i-markup-and-style-this-website.svg"><img alt="How I Markup &amp; Style This Website" height="1440" src="../img/about/how-i-markup-and-style-this-website.svg" width="2560"></a>
         </figure>
 
-        <p>Hail2u.netで使われているマークアップやスタイルの解説兼プレビューのページです。マークアップはHTMLのソースを、スタイルについては<a href="https://github.com/hail2u/hail2u.net-styles">全ての変更履歴を含むGitリポジトリ</a>か<a href="style.css">このページで参照されている非圧縮のCSSファイル</a>を参照してください。このページに限ってはマークアップにおかしいところが多々ありますが、その多くはプレビューを作る上でのやむを得ない事情によるものです。</p>
+        <p>Hail2u.netで使われているマークアップやスタイルの解説兼プレビューのページです。マークアップはHTMLのソースを、スタイルについては<a href="style.css">このページで参照されている非圧縮のCSSファイル</a>を参照してください。このページに限ってはマークアップにおかしいところが多々ありますが、その多くはプレビューを作る上でのやむを得ない事情によるものです。</p>
 
         <section>
           <h1>デバッグ</h1>
@@ -65,7 +65,7 @@
         <section>
           <h1>印刷向けスタイルシート</h1>
 
-          <p>なるべく白黒になるように調節しているだけです。</p>
+          <p>必要のないものを隠し、適切な位置で改行されるように調節しています。</p>
         </section>
       </article>
 
