--- a/src/css/test.html
+++ b/src/css/test.html
@@ -15,12 +15,12 @@
     <link href="style-guide.css" media="not print" rel="stylesheet">
     <link href="print.css" media="only print" rel="stylesheet">
 
-    <script async src="../js/debug/toggle-column.js"></script>
-    <script async src="../js/debug/toggle-eyecatch.js"></script>
-    <script async src="../js/debug/toggle-outline.js"></script>
-    <script async src="../js/debug/toggle-tagline.js"></script>
+    <script async src="../../node_modules/unutm/build/unutm.js"></script>
     <script async src="../js/ellipsis-title.js"></script>
-    <script async src="https://hail2u.net/scripts/unutm.js"></script>
+    <script async src="../js/toggle-column.js"></script>
+    <script async src="../js/toggle-eyecatch.js"></script>
+    <script async src="../js/toggle-outline.js"></script>
+    <script async src="../js/toggle-tagline.js"></script>
   </head>
 
   <body>
