--- a/src/css/test.html
+++ b/src/css/test.html
@@ -16,11 +16,11 @@
     <link href="print.css" media="only print" rel="stylesheet">
 
     <script async src="../../node_modules/unutm/build/unutm.js"></script>
-    <script async src="../js/ellipsis-title.js"></script>
-    <script async src="../js/toggle-column.js"></script>
-    <script async src="../js/toggle-eyecatch.js"></script>
-    <script async src="../js/toggle-outline.js"></script>
-    <script async src="../js/toggle-tagline.js"></script>
+    <script defer src="../js/ellipsis-title.js"></script>
+    <script defer src="../js/toggle-column.js"></script>
+    <script defer src="../js/toggle-eyecatch.js"></script>
+    <script defer src="../js/toggle-outline.js"></script>
+    <script defer src="../js/toggle-tagline.js"></script>
   </head>
 
   <body>
